在windows上测试调用脚本