@@ -5,6 +5,7 @@ import com.yhl.gj.config.pyconfig.PyLogRegexConfig;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 
@@ -14,11 +15,13 @@ public class CallWarningProgramTask extends Thread {
     // cmd 命令参数
     private final String[] cmdArray;
     private final PyLogProcessComponent logProcessComponent;
+    private final File workDir;
 
-    public CallWarningProgramTask(String[] cmdArray, PyLogProcessComponent logProcessComponent) {
+    public CallWarningProgramTask(String[] cmdArray, PyLogProcessComponent logProcessComponent, File workDir,String model) {
         super("call-warning-thread");
         this.cmdArray = cmdArray;
         this.logProcessComponent = logProcessComponent;
+        this.workDir = workDir;
     }
 
     @Override
@@ -26,7 +29,10 @@ public class CallWarningProgramTask extends Thread {
         log.info("run callWarningProgramTask ");
         Process proc = null;
         try {
-            proc = Runtime.getRuntime().exec(cmdArray);
+            ProcessBuilder pb = new ProcessBuilder(cmdArray);
+            pb.redirectErrorStream(true);
+            pb.directory(workDir);
+            proc = pb.start();
             BufferedReader in = new BufferedReader(new InputStreamReader(proc.getInputStream()));
             String line;
             while ((line = in.readLine()) != null) {
@@ -41,6 +47,7 @@ public class CallWarningProgramTask extends Thread {
                 proc.destroy();
             }
         }
+        log.info("end callWarningProgramTask ");
     }
     // 处理 python 输出的日志
 
